[project]
name = "agent-tutorial"
version = "0.1.0"
description = "This is a tutorial for ADK on GCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastmcp>=2.3.5",
    "google-adk[a2a,eval]>=1.1.0",
    "google-cloud-aiplatform[agent-engines]>=1.104.0",
    "google-cloud-bigquery>=3.36.0",
    "google-genai>=1.13.0",
    "pydotenv>=0.0.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
